fixes some spacing issues in header

--- a/muckrock/assets/scss/layout/menu/_header.scss
+++ b/muckrock/assets/scss/layout/menu/_header.scss
@@ -18,7 +18,7 @@
     .logo {
         display: block;
     }
-    @include media($large-layout) {
+    @include media($medium-layout) {
         .logotype {
             display: block;
         }
@@ -41,11 +41,8 @@ nav.primary {
             vertical-align: middle;
             padding-right: $vertical-rhythm/2;
         }
-        @include media($medium-layout) {
-            &.left  { float: left;  }
-            &.right { float: right; }
-        }
-
+        &.left  { float: left;  }
+        &.right { float: right; }
     }
 
     .menu-text { display: none; }
@@ -57,6 +54,7 @@ nav.primary {
     /* Logo */
 
     %logo {
+        margin-top: $vertical-rhythm/4;
         margin-bottom: 0;
         border: none;
         svg {
@@ -85,8 +83,8 @@ nav.primary {
         padding-top: 0em;
         > svg {
             display: block;
-            height: 2rem;
-            width: auto;
+            height: 100%;
+            width: 35px;
         }
     }
 
@@ -242,8 +240,6 @@ nav.website-navigation {
             display: inline-block;
             margin-bottom: 0;
             font-weight: $font-weight-bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
             cursor: pointer;
             @include border-radius;
             &.active {
